--- a/StudentsManager/package.json
+++ b/StudentsManager/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
@@ -26,6 +27,7 @@
   },
   "homepage": "https://github.com/wxhtd/ExpressJSProjects#readme",
   "dependencies": {
+    "axios": "^1.6.7",
     "express": "^4.18.2"
   },
   "devDependencies": {
