--- a/SampleHttpsService/package.json
+++ b/SampleHttpsService/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "studentsmanager",
+  "name": "samplehttpsservice",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wxhtd/ExpressJSProjects.git"
   },
   "keywords": [
     "https",
@@ -20,17 +16,13 @@
     "nodeJs",
     "web"
   ],
-  "author": "Cindy W.",
+  "author": "Cindy Wen",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/wxhtd/ExpressJSProjects/issues"
-  },
-  "homepage": "https://github.com/wxhtd/ExpressJSProjects#readme",
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "express": "^4.19.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
